data/raw_logs/lexical/lex_10.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_10.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/lexical/lex_10.c:1:25: error: expected expression before ';' token
    1 | int main() { int x = 5 ^; }
      |                         ^
